fixed layout issues with tabs and current classes

--- a/static/_scss/screen.scss
+++ b/static/_scss/screen.scss
@@ -541,6 +541,13 @@ div#content_wrapper {
     padding:0 calc-em(24);
 
     li {
+        @include prefixer(box-shadow, inset 0 1px 0 rgba(255,255,255,0.2));
+        border-right:1px solid $black;
+
+        &:first-child {
+            border-left:1px solid $black;
+        }
+
         &:hover {
             background-color:#474747;
         }
@@ -548,6 +555,7 @@ div#content_wrapper {
         a {
             display:inline-block;
             color:$white;
+            margin-top:1px;
             padding:calc-em(10, 11);
             &:hover,
             &:focus {
